# profile.wearable.platform.core.uifw.efl-config

./: Makefile.am  autogen.sh  configure.ac
packaging/: efl-config.path  efl-config.service  efl-config.service.in  efl-config.spec
src/: Makefile.am  efl_config.c
